# anchor-counter

./: Anchor.toml  Cargo.toml  README.md  pnpm-lock.yaml
.github/workflows/: main.yml
clients/js/: package.json
program/: Cargo.toml  idl.json  keypair.json
program/src/: lib.rs
scripts/: generate-clients.mjs
